--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
 
  <body>
    <h1>Hello, world!</h1>
-   <img src="../static/hello.jpg" />
+   <img src="../static/helloworld.jpg" />
  </body>
 </html>
