--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
  </head>
 
  <body>
-   <h1>Hello, world!</h1>
+   <h1>Hello, {{name}}!</h1>
    <img src="../static/helloworld.jpg" />
  </body>
 </html>
