--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,13 @@
  </head>
 
  <body>
-   <h1>Hello, {{name}}!</h1>
-   <img src="../static/helloworld.jpg" />
- </body>
-</html>
+    {% if signed_in %}
+      <h1>Welcome back!</h1>
+      <button>Sign Out</button>
+    {% else %}
+      <h1>Hello Stranger!</h1>
+      <button>Sign In</button>
+      <button>Sign Up</button>
+    {% endif %}
+  </body>
+  </html>
